# Better-Real-ESRGAN

./: .gitattributes  .gitignore  Better Real-ESRGAN.sln  Better_Real-ESRGAN.bak  Better_Real-ESRGAN.e  Better_Real_ESRGAN.vsln  Better_Real_ESRGAN.vsln.1.vbak  Better_Real_ESRGAN.vsln.2.vbak  README.md  README_CN.md  anime_avi.cmd  anime_mp4.cmd  anime_mp4_ffmpeg.cmd  better_real_esrgan.py  book.toml  build.bat  default_png.cmd  hosts  jpg.cmd  review.bat  settings.json  settings.vds  setup.suf  windeployqt.txt
Better_Real-ESRGAN/: Better_Real-ESRGAN.pro  Better_Real-ESRGAN.pyproject  CMakeLists.txt  better_real_esrgan.cpp  better_real_esrgan.h  better_real_esrgan.h.autosave  better_real_esrgan.py  better_real_esrgan.spec  better_real_esrgan.ui  better_real_esrgan.ui.autosave  derive_exe_console.bat  derive_exe_noconsole.bat  form.ui  icon.psd  icon.sai2  main.cpp  sponsor.cpp  sponsor.qrc  sponsor.ui  ui_convert.bat  ui_form.py
Better_Real-ESRGAN/command/AnimeJpg/AnimeJpg/: main.cpp
Better_Real-ESRGAN/command/Batch/: DefaultPng.bat  GeneralX4V3.bat  Video3.bat
Better_Real-ESRGAN/command/C#.NET/test/: Program.cs
Better_Real-ESRGAN/command/C#/test/: Program.cs
Better_Real-ESRGAN/command/C/AnimeJpg/: AnimeJpg.vcxproj  main.c
Better_Real-ESRGAN/command/C/AnimePng/: AnimePng.sln
Better_Real-ESRGAN/command/C/DefaultJpg/: DefaultJpg.sln  main.c
Better_Real-ESRGAN/command/C/DefaultPng/: DefaultPng.sln  DefaultPng.vcxproj
Better_Real-ESRGAN/command/C/GeneralX4V3_wdn/: GeneralX4V3_wdn.vcxproj
Better_Real-ESRGAN/command/C/Video2/: main.c
Better_Real-ESRGAN/command/C/Video3/: Video3.sln
Better_Real-ESRGAN/command/C/Video4/: Video4.sln
Better_Real-ESRGAN/command/C/test/: test.sln
Better_Real-ESRGAN/command/PowerShell/: Video4.ps1
Better_Real-ESRGAN/command/Rust/: start_GeneralX4V3wdn_project.bat  start_anime_png_project.bat  start_default_jpg_project.bat  start_default_png_project.bat  start_test_project.bat  start_video2_project.bat
(+803 files in other folders)
